refactor(kitchenpos): apply feedback for step2