@@ -1,10 +1,16 @@
 package kitchenpos.menus.application;
 
+import kitchenpos.common.domain.Name;
+import kitchenpos.common.domain.Price;
+import kitchenpos.common.domain.PurgomalumClient;
 import kitchenpos.menus.application.menu.MenuService;
 import kitchenpos.menus.application.menu.dto.MenuProductRequest;
 import kitchenpos.menus.application.menu.dto.MenuRequest;
 import kitchenpos.menus.application.menu.dto.MenuResponse;
-import kitchenpos.menus.domain.menu.*;
+import kitchenpos.menus.domain.menu.MenuProduct;
+import kitchenpos.menus.domain.menu.MenuProducts;
+import kitchenpos.menus.domain.menu.MenuRepository;
+import kitchenpos.menus.domain.menu.ProductClient;
 import kitchenpos.menus.domain.menugroup.MenuGroupRepository;
 import kitchenpos.menus.infra.DefaultProductClient;
 import kitchenpos.products.application.InMemoryProductRepository;
@@ -31,7 +37,7 @@ class MenuServiceTest {
     private MenuRepository menuRepository;
     private MenuGroupRepository menuGroupRepository;
     private ProductRepository productRepository;
-    private MenuPurgomalumClient purgomalumClient;
+    private PurgomalumClient purgomalumClient;
     private ProductClient productClient;
     private MenuService menuService;
     private UUID menuGroupId;
@@ -71,7 +77,7 @@ class MenuServiceTest {
     @MethodSource("menuProducts")
     @ParameterizedTest
     void create(final List<MenuProductRequest> menuProducts) {
-        final MenuRequest expected = createMenuRequest("후라이드+후라이드", 19_000L, menuGroupId, true, menuProducts);
+        MenuRequest expected = createMenuRequest("후라이드+후라이드", 19_000L, menuGroupId, true, menuProducts);
         assertThatThrownBy(() -> menuService.create(expected))
                 .isInstanceOf(IllegalArgumentException.class);
     }
@@ -80,7 +86,7 @@ class MenuServiceTest {
         return Arrays.asList(
                 null,
                 Arguments.of(Collections.emptyList()),
-                Arguments.of(Arrays.asList(createMenuProductRequest(INVALID_ID, 2L)))
+                Arguments.of(List.of(createMenuProductRequest(INVALID_ID, 2L)))
         );
     }
 
@@ -179,7 +185,9 @@ class MenuServiceTest {
     @DisplayName("메뉴의 가격이 메뉴에 속한 상품 금액의 합보다 높을 경우 메뉴를 노출할 수 없다.")
     @Test
     void displayExpensiveMenu() {
-        final UUID menuId = menuRepository.save(menu(33_000L, false, menuProduct(product, 2L))).getId();
+        final MenuProduct menuProduct = menuProduct(product, 2L);
+        final UUID menuId = menuRepository.save(menu(19_000L, false, menuProduct)).getId();
+        menuProduct.changeProductPrice(Price.of(BigDecimal.valueOf(9_000L)));
         assertThatThrownBy(() -> menuService.display(menuId))
                 .isInstanceOf(IllegalStateException.class);
     }
@@ -200,37 +208,63 @@ class MenuServiceTest {
         assertThat(actual).hasSize(1);
     }
 
-    @DisplayName("MenuPrice VO를 정상 생성한다.")
+    @DisplayName("Price VO를 정상 생성한다.")
     @ValueSource(strings = "16000")
     @ParameterizedTest
-    void createMenuPriceVo(final BigDecimal price) {
-        final MenuPrice actual = MenuPrice.of(price);
+    void createPriceVo(final BigDecimal price) {
+        final Price actual = Price.of(price);
         assertThat(actual.getPrice()).isEqualTo(price);
     }
 
-    @DisplayName("MenuPrice VO 생성시 가격이 비어 있거나 0원 이하면 예외가 발생한다.")
+    @DisplayName("Price VO 생성시 가격이 비어 있거나 0원 이하면 예외가 발생한다.")
     @ValueSource(strings = "-10000")
     @NullSource
     @ParameterizedTest
-    void throwExceptionOfMenuPriceVo(final BigDecimal price) {
-        assertThatThrownBy(() -> MenuPrice.of(price))
+    void throwExceptionOfPriceVo(final BigDecimal price) {
+        assertThatThrownBy(() -> Price.of(price))
                 .isInstanceOf(IllegalArgumentException.class);
     }
 
-    @DisplayName("MenuName VO를 정상 생성한다.")
+    @DisplayName("Name VO를 정상 생성한다.")
     @ValueSource(strings = "간장치킨")
     @ParameterizedTest
-    void createMenuName(final String name) {
-        final MenuName actual = MenuName.of(name, purgomalumClient);
+    void createName(final String name) {
+        final Name actual = Name.of(name, purgomalumClient);
         assertThat(actual.getName()).isEqualTo(name);
     }
 
-    @DisplayName("MenuName VO 생성시 이름이 비어 있거나 비속어가 포함되어 있으면 예외가 발생한다.")
+    @DisplayName("Name VO 생성시 이름이 비어 있거나 비속어가 포함되어 있으면 예외가 발생한다.")
     @ValueSource(strings = "비속어")
     @NullSource
     @ParameterizedTest
-    void throwExceptionOfMenuName(final String name) {
-        assertThatThrownBy(() -> MenuName.of(name, purgomalumClient))
+    void throwExceptionOfName(final String name) {
+        assertThatThrownBy(() -> Name.of(name, purgomalumClient))
+                .isInstanceOf(IllegalArgumentException.class);
+    }
+
+    @DisplayName("MenuProducts 일급 컬렉션을 정상 생성한다.")
+    @Test
+    void createMenuProducts() {
+        final List<MenuProduct> expected = List.of(menuProduct(product, 2L));
+        final MenuProducts actual = MenuProducts.of(expected);
+        assertThat(actual.getMenuProducts()).isEqualTo(expected);
+    }
+
+    @DisplayName("MenuProducts 일급 컬렉션 생성시 MenuProduct List가 비어 있으면 예외가 발생한다.")
+    @MethodSource("menuProducts")
+    @NullSource
+    @ParameterizedTest
+    void throwExceptionOfEmptyMenuProducts(final List<MenuProduct> menuProducts) {
+        final List<MenuProduct> expected =  Collections.emptyList();
+        assertThatThrownBy(() -> MenuProducts.of(expected))
+                .isInstanceOf(IllegalArgumentException.class);
+    }
+
+    @DisplayName("MenuProducts 일급 컬렉션 생성시 상품 수량이 0보다 작으면 예외가 발생한다.")
+    @Test
+    void throwExceptionOfMenuProducts() {
+        final List<MenuProduct> expected = List.of(menuProduct(product, -1L));
+        assertThatThrownBy(() -> MenuProducts.of(expected))
                 .isInstanceOf(IllegalArgumentException.class);
     }
 
